--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,8 @@ Description: This is a wrapper for the Entso-E API. The goal
 License: MIT
 Encoding: UTF-8
 LazyData: true
+Imports:
+    dplyr
 URL: https://github.com/krose/entsoeapi
 BugReports: https://github.com/krose/entsoeapi/issues
 RoxygenNote: 7.1.1
